RESOLVED FIXED186939
NetworkLoadChecker should not check CORS for 304 responses triggered by WebProcess revalidation
https://bugs.webkit.org/show_bug.cgi?id=186939
Summary NetworkLoadChecker should not check CORS for 304 responses triggered by WebPr...
youenn fablet
Reported 2018-06-22 13:41:02 PDT
As per spec, NetworkLoadChecker should not check CORS for 304 responses if the WebProcess is asking for revalidation. Instead, the WebProcess should do it
Attachments
Patch (5.37 KB, patch)
2018-06-22 13:54 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2018-06-22 13:52:52 PDT
youenn fablet
Comment 2 2018-06-22 13:54:47 PDT
youenn fablet
Comment 3 2018-06-25 13:04:07 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/11663
WebKit Commit Bot
Comment 4 2018-06-25 14:14:13 PDT
Comment on attachment 343362 [details] Patch Clearing flags on attachment: 343362 Committed r233172: <https://trac.webkit.org/changeset/233172>
WebKit Commit Bot
Comment 5 2018-06-25 14:14:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.