NetworkLoadChecker should not check CORS for 304 responses triggered by WebProcess revalidation https://bugs.webkit.org/show_bug.cgi?id=186939 <rdar://problem/40941725>

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/cors/resources/cache-304.py: Added.
* web-platform-tests/cors/script-304-expected.txt: Added.
* web-platform-tests/cors/script-304.html: Added.

Source/WebKit:

* NetworkProcess/NetworkLoadChecker.cpp:
(WebKit::NetworkLoadChecker::validateResponse):


Canonical link: https://commits.webkit.org/202263@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233172 268f45cc-cd09-0410-ab3c-d52691b4dbfc